fixing legibility

--- a/css/index.css
+++ b/css/index.css
@@ -91,6 +91,7 @@ header{
     margin: 0 1rem;
     line-height: 1.3rem;
     text-justify: inter-word;
+    font-size: 1.2rem;
 }
 
 .my-work{
